<resources>
    <string name="app_name">My_roomate</string>
    <string name="title_activity_menu_view">MenuView</string>
    <string name="title_myrooms">My Rooms</string>
    <string name="title_buzon">Buzón</string>
    <string name="title_explorar">Explorar</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_guardados">Guardados</string>
    <string name="title_activity_menu_nav">menu_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_login">My_Roomate</string>

    <string name="contrasenia_cambiada">!Contraseña Cambiada¡</string>
    <string name="ocurrio_un_error">!Ocurrio un Error¡</string>

    <string name="search_title">encuentra a tu roomie</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_correo">Email</string>
    <string name="text_contraseña">Contraseña</string>
    <string name="text_contraseñaconf">Confirmar contraseña</string>
    <string name="bto_registrar">Registrarme</string>
    <string name="forget_password">olvide mi contraseña</string>
    <string name="bto_login">CONTINUAR</string>
    <string name="description_login">No tengo una cuenta,</string>
    <string name="registrarte">Registrarme</string>
    <string name="btn_facebook">Continuar con Facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="envio_codigo_cel">Te enviaremos un código a tu celular</string>
    <string name="enviar_codigo">Enviar código</string>
    <string name="verificar_codigo">Comprobar código</string>
    <string name="verificar_codigo_cel">Introduce el código que te enviamos</string>
    <string name="explorar_propuestas_cercanas">Propuestas cercanas</string>
    <string name="explorar_mis_propuestas">Mis propuestas</string>
    <string name="explorar_propuestas_vistas">Propuestas vistas</string>

    <string name="title_buzon_ms">Buzón de Mensajes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="config_group1_title">General</string>
    <string name="config_group2_title">Publicación</string>
    <string name="config_about_title">Sobre la app</string>

</resources>
